# TerritorialGuard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.py  install.sh  main.py  metricas.py  pyproject.toml  relatorio.py
.github/workflows/: ci.yml
contexto/: 01-setup-ambiente.md  02-arquitetura-projeto.md  03-fluxo-trabalho.md  04-padroes-codigo.md  05-armadilhas.md  06-cultura-desenvolvimento.md
data/: auditoria_producao_2026-04-06.md  diagnostico_andradina_sp_2026-04-06.md  relatorio_descobertas_andradina_sp.md
sprints/: 00_visao_geral.md  01_inventario_mapeamento.md  02_scanner_automatico.md  03_rastreamento_upstream.md  04_diagnostico_automatico.md  06_validacao_upstream.md  07_menu_e_melhorias.md  SPRINT_S22_HIGIENIZACAO.md  contexto_tecnico.md
src/territorialguard/: __init__.py  executor_bq.py  linhagem.py  main.py  relatorio.py  validador.py
tests/: test_linhagem.py  test_metricas.py  test_validador.py
